--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/marinatedchicken.html">Marinated Chicken</a>
+    <a href="marinatedchicken.html">Marinated Chicken</a>
 </body>
 </html>
